common/loginpage/src/css/styles.less
/* ... */
.action-panel {
  display: none;
  height: 100%;
  padding-block: 40px;
  background-color: @background-action-panel;

  > label {
    position: absolute;
    top: 50%;
  }

  &.style--free {
    padding: 0;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
  }

  &.settings {
    overflow-x: hidden;
    min-width: 450px;
  }

  &.about {
    overflow-x: scroll;
    min-width: 450px;
  }

  &.recents {
    padding-bottom: 0;
  }

  &.templates {
    /*        padding: 20px;*/
  }

  // Folders
  &.open {
    .file-list-body .row {
      justify-content: normal;
      gap: 104px;
      grid-template-columns: 264px 240px;
    }

    .file-list-title {
      margin-bottom: 0;
    }

    #box-open-acts {
      text-align: left;
      padding: 16px;
    }

    #area-dnd-file {
      margin-block: 24px;
    }
  }

}

.connect {
  center {
    padding: 70px 20px;
  }

  #btn-connect {
    margin-top: 50px;
  }

  button {
    &[data-cprov] {
      width: 160px;
      margin: 0 20px 20px 0;
      color: @text-normal;

      img.icon {
        height: 100%;
        width: auto;
      }
    }
  }

  #box-providers-premium-button {
    > button {
      width: 340px;
    }
  }

  .theme-type-dark & {
    .icon__light {
      display: none;
    }
  }

  .theme-type-light & {
    .icon__dark {
      display: none;
    }
  }
}

.text-welcome {
  font-weight: 100;
}

.text-description {
  font-size: 15px;
  font-weight: normal;
}

.flexbox {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.flex-fill {
  flex-grow: 1;
}

.flex-item {
  overflow: hidden;
}

.recent-panel-container {
  display: grid;
  grid-template-rows: max-content max-content max-content max-content 1fr;
  //grid-template-rows: 42px 208px 86px 182px 1fr;
  grid-template-areas: 'search' 'template' 'welcome' 'dnd-zone' 'files';
  //gap: 40px;
  position: relative;
  height: 100%;
  padding-inline: 32px;
  max-width: 1680px;
  margin-inline: auto;
  margin-bottom: -40px;
  overflow: hidden;

  .search-bar {
    grid-area: search;

    h1 {
      margin: 0;
    }
  }

  .files {
    margin-top: 40px;
    grid-area: files;
    display: flex;
    flex-direction: column;
    gap: 40px;
    overflow-y: auto;
  }

  #area-dnd-file {
    margin-top: 40px;
    grid-area: dnd-zone;
  }
}

.gradient-bottom-bar {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;

  .top, .bottom { width: 100%; height: 16px; }

  .top {
    background: linear-gradient(180deg, transparent, @background-normal 100%);
  }

  .bottom {
    background-color: @background-normal;
  }
}

.open-panel-container {
  .recent-panel-container();
  gap: 8px;
}

#area-document-creation-grid {
  grid-area: template;
  margin-top: 40px;
  padding: 12px 16px 0; // 16px inner + outer 32px
  overflow-x: auto;

  @media(max-width: 1280px) {
    padding-right: 48px;
    margin-right: -16px;

    .rtl & {
      padding-right: 32px;
      margin-right: 0px;

      padding-left: 48px;
      margin-left: -16px;
    }
  }
}

#area-welcome {
  margin-top: 40px;
  margin-inline: auto;

  text-align: center;
  max-width: 744px;

  h2 {
    font-weight: 700;
    font-size: 18px;
    line-height: 16px;
  }
}

#box-recent, #box-recovery {
  display: none;
  flex-direction: column;
}

#box-recent {
  padding-bottom: 32px;
}

#box-recovery {
  .file-list-body, .file-list-head {
    .col-location, .col-date {
      display: none;
    }
  }
}

#idx-sidebar-portals,
#box-portals {
  display: none;

  .table-files {
    /*table-layout: auto;*/

    td:first-child {
      /*width: 50%;*/
    }

    td:empty {
      width: 1px;
    }
  }

  tr:not(.lost) {
    .cportal, .cuser, .cemail {
      /*width: 25%;*/
      padding: 0;
      margin: 0;
      overflow: hidden;
      text-overflow: ellipsis;
    }

    .cicon {
      padding: 0 0 0 10px;
      text-align: center;
      width: 55px;
    }

    .cell-tools {
      width: 45px;
      padding: 0 8px 0 0;
      overflow: visible;

      .hlayout {
        justify-content: flex-end;
      }
    }
  }

    .btn-quick {
        width: 24px;
        height: 24px;
        padding: 0;
        opacity: .8;
        background-color: transparent;
        svg.icon {
            /*fill: #5a5a5a;*/
            /*.theme-type-dark & {*/
                /*fill: #a5a5a5;*/
            /*}*/

            stroke: @icon-normal;
        }
        .icon {
            width: 24px;
            height: 24px;
            background-position: -86px -48px;
        }

    &:hover {
      opacity: 1;
    background-color: @highlight-button-pressed;}
  }

  tr:not(:hover) {
    .cell-tools > div, td > span {
      display: none;
    }
  }

  /*.icon {*/
    /*width: 36px;*/
    /*height: 36px;*/
  /*}*/
}

.lst-tools {
  text-align: left;
  margin-top: 35px;
}

.format-from-index(@index) {
  background-position: -24px*@index 0;
}
/* ... */

